--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,26 +1,43 @@
-# FastAPI core
-fastapi
-uvicorn[standard]
-
-# Database (async)
-sqlalchemy[asyncio]
-aiosqlite  # Use 'asyncpg' or 'aiomysql' for PostgreSQL/MySQL respectively
-
-# Database migrations
-alembic
-aiomysql
-
-
-# Auth & Security
-python-jose[cryptography]  # For JWT
-passlib[bcrypt]            # For password hashing
-
-# Pydantic for settings management
-pydantic
-python-dotenv              # For reading .env files
-
-# Optional (Cross-Origin)
-starlette
-
-# Dev tools
-httpx                      # For async HTTP client in tests
+aiomysql==0.2.0
+aiosqlite==0.21.0
+alembic==1.16.4
+annotated-types==0.7.0
+anyio==4.9.0
+bcrypt==4.3.0
+certifi==2025.7.14
+cffi==1.17.1
+click==8.2.1
+colorama==0.4.6
+cryptography==45.0.5
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+fastapi==0.116.1
+greenlet==3.2.3
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+Mako==1.3.10
+MarkupSafe==3.0.2
+passlib==1.7.4
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+PyMySQL==1.1.1
+python-dotenv==1.1.1
+python-jose==3.5.0
+PyYAML==6.0.2
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+starlette==0.47.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+uvicorn==0.35.0
+watchfiles==1.1.0
+websockets==15.0.1
